--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "15.1.2",
     "punycode": "^2.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "postcss": "^8",
